various javadoc updates